# tmux-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  coverage.txt  flake.nix  rustfmt.toml
.config/: nextest.toml
.github/workflows/: beta-clippy.yml  build.yml  codeql.yml  coverage.yml  sarif.yml  wiki-update.yml
docs/: index.md
docs/data/: 2025-07-07-1441.json  2025-07-07-1601.json  code-stats.csv  latest.json
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: colour_find_rgb.rs  colour_parse_x11.rs
regress/: Makefile  utf8-test.sh
src/: alerts.rs  arguments.rs  attributes.rs  bitstr.rs  cfg_.rs  client_.rs  cmd_parse.lalrpop  cmd_parse.rs  cmd_parse_pratt.rs  colour.rs  conpty.rs  control.rs  control_notify.rs  environ_.rs  event_.rs  file.rs  format.rs  format_draw_.rs  grid_.rs  grid_reader_.rs  grid_view.rs  hyperlinks_.rs  image_.rs  image_sixel.rs  input.rs  input_keys.rs  job_.rs  key_bindings_.rs  key_string.rs  keyc_mouse_key.rs  layout.rs  layout_custom.rs  layout_set.rs  lib.rs  libc.rs  log.rs  main.rs  menu_.rs  mode_tree.rs  names.rs  (+38 more)
src/cmd_/: cmd_attach_session.rs  cmd_bind_key.rs  cmd_break_pane.rs  cmd_capture_pane.rs  cmd_choose_tree.rs  cmd_command_prompt.rs  cmd_confirm_before.rs  cmd_copy_mode.rs  cmd_detach_client.rs  cmd_display_menu.rs  cmd_display_message.rs  cmd_display_panes.rs  cmd_find.rs  cmd_find_window.rs  cmd_if_shell.rs  cmd_join_pane.rs  cmd_kill_pane.rs  cmd_kill_server.rs  cmd_kill_session.rs  cmd_kill_window.rs  cmd_list_buffers.rs  cmd_list_clients.rs  cmd_list_keys.rs  cmd_list_panes.rs  cmd_list_sessions.rs  cmd_list_windows.rs  cmd_load_buffer.rs  cmd_lock_server.rs  cmd_move_window.rs  cmd_new_session.rs  cmd_new_window.rs  cmd_paste_buffer.rs  cmd_pipe_pane.rs  cmd_queue.rs  cmd_refresh_client.rs  cmd_rename_session.rs  cmd_rename_window.rs  cmd_resize_pane.rs  cmd_resize_window.rs  cmd_respawn_pane.rs  (+24 more)
src/compat/: b64.rs  closefrom.rs  fdforkpty.rs  fgetln.rs  freezero.rs  getdtablecount.rs  getopt.rs  getpeereid.rs  getprogname.rs  imsg.rs  imsg_buffer.rs  mod.rs  ntohll.rs  queue.rs  reallocarray.rs  recallocarray.rs  setproctitle.rs  strlcat.rs  strlcpy.rs  strtonum.rs  systemd.rs  tree.rs  unvis.rs  vis.rs
src/event_/: event_libevent.rs
src/event_/event_tokio/: bufferevent_impl.rs  evbuffer_impl.rs  event_impl.rs  mod.rs
src/libc/: windows.rs
src/terminfo/: expand.rs  locate.rs  mod.rs  parse.rs  search.rs
tests/: coverage.rs  regress.rs
tests/common/: mod.rs
tests/coverage/: alerts.rs  bind_key.rs  break_pane.rs  cmd_choose_tree.rs  cmd_display_menu.rs  cmd_display_panes.rs  cmd_list_keys.rs  cmd_refresh_client.rs  command_prompt.rs  detach_client.rs  join_pane.rs  kill_pane.rs  list_buffers.rs  list_clients.rs  list_sessions.rs  list_windows.rs  load_buffer.rs  lock_server.rs  move_window.rs  pipe_pane.rs  rename_window.rs  resize_pane.rs  respawn_pane.rs  respawn_window.rs  rotate_window.rs  server_access.rs  set_buffer.rs  show_environment.rs  show_messages.rs  show_prompt_history.rs  status.rs  swap_pane.rs  swap_window.rs  window_clock.rs
tests/regress/: alerts.rs  am_terminal.rs  bind_key.rs  break_pane.rs  capture_pane.rs  cmd_confirm_before.rs  cmd_display_message.rs  cmd_find_window.rs  combine.rs  command_order.rs  command_prompt.rs  conf_syntax.rs  control_client.rs  copy_mode.rs  cursor.rs  detach_client.rs  format_strings.rs  has_session.rs  if_shell.rs  input_keys.rs  join_pane.rs  kill_session.rs  list_buffers.rs  list_clients.rs  list_sessions.rs  list_windows.rs  load_buffer.rs  lock_server.rs  move_window.rs  new_session.rs  new_window.rs  osc.rs  pipe_pane.rs  rename_window.rs  resize_pane.rs  respawn_pane.rs  respawn_window.rs  rotate_window.rs  run_shell.rs  server_access.rs  (+11 more)
tools/: safe_candidates.rs  unsafe_usage_analyzer.rs
